# shogi-tools

./: .gitignore  README.md  board.py  convert.sh  kif_parser.py  move.py  piece.py  png2mp4.sh  pyproject.toml  sfen2svg.py  sfen_converter.py  svg_board.py  test_board.py  test_kif_parser.py  test_piece.py  test_sfen_converter.py
svgs/: convert.sh  png2mp4.sh
