[tool.poetry]
name = "shogi-tools"
version = "0.1.0"
description = ""
authors = ["kawagh <kawagh.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
